--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -9,5 +9,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.6.x'
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+      - run: pip install pep8
+      - run: cd backend
+      - run: pep8 yasmine
