--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -1,13 +1,49 @@
 name: Yasmine
 on: [ push ]
 jobs:
-  lint_python:
+#  lint_python:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python 3.6
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.6.x'
+#      - run: pip install pep8
+#      - run: pep8 backend/yasmine
+
+#  build_app:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python 3.6
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.6.x'
+
+
+
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.6
-        uses: actions/setup-python@v2
+      - name: Check Out Repo
+        uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          python-version: '3.6.x'
-      - run: pip install pep8
-      - run: pep8 backend/yasmine
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./docker-gitlab-centos7
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/yasmine-utils:latest
