--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -35,17 +35,23 @@ jobs:
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Build image
+        run: docker build . --file docker-gitlab-centos7 --tag ghcr.io/iris-edu/yasmine-stationxml-editor/yasmine-utils:latest
+
+      - name: Push image
+        run: docker push ghcr.io/iris-edu/yasmine-stationxml-editor/yasmine-utils:latest
+
 #      - name: Extract metadata (tags, labels) for Docker
 #        id: meta
 #        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
 #        with:
 #          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          file: ./docker-gitlab-centos7
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+#        with:
+#          context: .
+#          file: ./docker-gitlab-centos7
+#          push: true
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
