--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -19,10 +19,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add CI_COMMIT_SHORT_SHA env property with commit short sha
         run: echo "CI_COMMIT_SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+      - name: Get TIMESTAMP
+        id: date
+        run: echo "::set-output name=date::$(date --utc --rfc-2822)"
       - name: Build application
         env:
           VERSION_FILE: "yasmine/static/js/yasmine/classic/app.js"
-          CI_JOB_TIMESTAMP: $(date --utc --rfc-2822)
+          CI_JOB_TIMESTAMP: "${{ steps.date.outputs.date }}"
         run: |
           cd frontend
           sencha app build
