--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -19,6 +19,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add CI_COMMIT_SHORT_SHA env property with commit short sha
         run: echo "CI_COMMIT_SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Get TIMESTAMP
         id: date
         run: echo "::set-output name=date::$(date --utc --rfc-2822)"
@@ -26,6 +29,7 @@ jobs:
         env:
           VERSION_FILE: "yasmine/static/js/yasmine/classic/app.js"
           CI_JOB_TIMESTAMP: "${{ steps.date.outputs.date }}"
+          CI_COMMIT_TAG: "{{ steps.get_version.outputs.VERSION }}"
         run: |
           cd frontend
           sencha app build
