--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -51,14 +51,13 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: yasmine-artifact
-      - name: Install Yasmine
+      - name: Install and Run Yasmine tests
         run: |
-#          sudo pip3.6 install numpy
           sudo pip3.6 install YASMINE-1.0.tar.gz
-#          yasmineapp.py syncdb upgrade heads
-#          yasmineapp.py runserver &>/dev/null&
-#          sleep 10
-#          yasmineapp.py test
+          yasmineapp.py syncdb upgrade heads
+          yasmineapp.py runserver &>/dev/null&
+          sleep 10
+          yasmineapp.py test
 
 
 #  docker:
