--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -1,16 +1,16 @@
 name: Yasmine
 on: [ push ]
 jobs:
-#  lint_python:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up Python 3.6
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: '3.6.x'
-#      - run: pip install pep8
-#      - run: pep8 backend/yasmine
+  lint_python:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.6
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.6.x'
+      - run: pip install pep8
+      - run: pep8 backend/yasmine
 
   build_app:
     runs-on: ubuntu-latest
