--- a/.github/workflows/yasmine.yml
+++ b/.github/workflows/yasmine.yml
@@ -53,7 +53,7 @@ jobs:
           name: yasmine-artifact
       - name: Install and Run Yasmine tests
         run: |
-          sudo pip3.6 install numpy
+          pip3.6 install --upgrade pip setuptools
           sudo pip3.6 install YASMINE-1.0.tar.gz
           yasmineapp.py syncdb upgrade heads
           yasmineapp.py runserver &>/dev/null&
