--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: "3.8"
 services:
   yasmine-frontend:
+    image: iris-edu/yasmine-stationxml-editor
     container_name: yasmine-frontend
-    build: frontend
-    image: yasmine/frontend
+    build:
+      network: host
+      context: ./frontend
+      dockerfile: ./Dockerfile
     ports:
       - "1841:1841"
     volumes:
@@ -12,7 +15,10 @@ services:
       - yasmine
   yasmine-backend:
     container_name: yasmine-backend
-    build: backend
+    build:
+      network: host
+      context: ./backend
+      dockerfile: ./Dockerfile
     image: yasmine/backend
     ports:
       - "80:80"
