Rename folder 'YASMINE' to 'yasmine'
* Rename working directory of the backend Docker container
* Rename APP_DIR in settings.py

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,7 +31,7 @@
 # ****************************************************************************/
 
 FROM python:3.6.5-slim
-WORKDIR /opt/YASMINE/src
+WORKDIR /opt/yasmine/src
 
 RUN apt-get update && apt-get install -y wget unzip gnupg gcc
 
