Added commented out lines to docker-compose.yml...
* ...specifying the target platforms for M1 users
* Added special README instructions for M1 users
* Corrected README instructions for offline use (data dir at repo root)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         container_name: yasmine-frontend
         build: frontend
         image: yasmine/frontend
-        platform: linux/amd64
+        # platform: linux/arm64 # for M1 users
         ports:
             - "1841:1841"   
         volumes:
@@ -15,6 +15,7 @@ services:
         container_name: yasmine-backend
         build: backend
         image: yasmine/backend
+        # platform: linux/amd64 # for M1 users
         ports:
             - "8080:80"
         volumes:
