--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
     "name": "yasmine",
     "namespace": "yasmine",
-    "version": "1.0.0",
+    "version": "4.1.0-beta",
     "framework": "ext",
 
     /**
