--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
+remote_theme: abhinavs/moonwalk
 plugins:
   - jekyll-feed
 toc:
