--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: Yasmine
 email: feedback@ds.iris.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Yasmine is an editor designed to facilitate the creation of geophysical station metadata in FDSN StationXML format.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/yasmine-stationxml-editor" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
