Added my changes to User Guide page

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,7 +7,7 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "jekyll", "~> 4.2.2"
+gem "jekyll"
 gem 'jekyll-gist'
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.5"
@@ -32,5 +32,10 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 # Lock `http_parser.rb` gem to `v0.6.x` on JRuby builds since newer versions of the gem
 # do not have a Java counterpart.
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
-
+gem "jekyll-sass-converter"
 gem "kramdown-syntax-coderay", "~> 1.0"
+gem "jekyll-commonmark"
+gem "webrick", "~> 1.7"
+group :jekyll_plugins do
+  gem 'jekyll-commonmark-ghpages'
+end
