--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -36,7 +36,7 @@ toc:
 include:
   - /images/
   - /assets/
-markdown: CommonMarkGhPages
+markdown: kramdown 
 kramdown:
   syntax_highlighter: coderay
   input: GFM
