Fix links in examples

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 data/
 Yasmine-Documentations-3.0.1.pdf
 NOTES.md
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
+Gemfile.lock
+**/NOTES/**
+.jekyll-cache/*
